# churchdirectory

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  spec.md  vite.config.ts
.github/workflows/: release.yml
src/: App.vue  router.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  db.rs  import.rs  lib.rs  models.rs  pdf.rs  photos.rs
src-tauri/src/commands/: families.rs  leadership.rs  members.rs  mod.rs  settings.rs  staff.rs
src/assets/: main.css
src/components/: AppLayout.vue  BackupRestore.vue  ImportWizard.vue  PdfGenerator.vue
src/components/common/: ConfirmDialog.vue  PhotoCropper.vue  PhotoUpload.vue  SearchBar.vue
src/components/families/: FamilyForm.vue  FamilyList.vue
src/components/members/: MemberCard.vue  MemberForm.vue
src/stores/: families.ts  leadership.ts  settings.ts  staff.ts
src/views/: AboutView.vue  BackupView.vue  FamilyDetailView.vue  FamilyEditView.vue  GenerateView.vue  HomeView.vue  ImportView.vue  LeadershipView.vue  MemberEditView.vue  SettingsView.vue  StaffView.vue
