[package]
name = "church-directory"
version = "0.1.0"
description = "Church Photo Directory Application"
authors = ["you"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-log = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"

# Database
rusqlite = { version = "0.32", features = ["bundled"] }

# XLSX Import
calamine = "0.26"

# Image processing
image = "0.25"

# PDF generation
printpdf = { version = "0.7", features = ["embedded_images"] }

# Backup/Restore
zip = "2.2"
walkdir = "2"

# Utility
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"
base64 = "0.22"
tauri-plugin-shell = "2.3.5"
